--- a/.gitignore
+++ b/.gitignore
@@ -169,3 +169,52 @@ cython_debug/
 
 # PyPI configuration file
 .pypirc
+
+
+# Node.js
+node_modules/
+
+# Build output
+build/
+
+# Logs
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Dependency directories
+jspm_packages/
+
+# TypeScript
+*.tsbuildinfo
+
+# IDE/Editor folders
+.vscode/
+.idea/
+
+# Operating system files
+.DS_Store
+Thumbs.db
+
+# Environment files
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Next.js (if using)
+.next/
+
+# React Native
+.expo/
+
+# Parcel-bundler cache
+.cache/
+
+# Babel build output
+/lib/
+
+.gradio
